@@ -1,5 +1,10 @@
 # $Id$
 
+2008-03-24	Konstantin V. Arkhipov
+
+	* core/Form/Primitives/PrimitiveIdentifierList.class.php: custom
+	clean() implemented.
+
 2008-03-07	Denis M. Gabaidulin
 
 	* main/UnifiedContainer/UnifiedContainer.class.php: dropList()
